[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["fmdap/**/*"]

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "fmdap"
version = "0.2.dev0"
description = "MIKE FM Data Assimilation pre- and post-processor."
authors = [{ name = "Jesper Sandvig Mariegaard", email = "jem@dhigroup.com" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "scipy",
    "statsmodels",
    "mikeio>=1.2.0",
    "modelskill",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "sphinx",
    "sphinx-book-theme",
    "shapely",
    "plotly >= 4.5",
    "ruff",
]
test = ["pytest", "shapely"]
notebooks = ["nbformat", "nbconvert", "jupyter", "plotly"]

[project.urls]
Homepage = "https://github.com/DHI/fmdap"

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
ignore = ["E731"]

[tool.ruff.format]
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pylint]
max-line-length = 88
